; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/kqueue/libkqueue/extr_read.c_test_kevent_socket_del.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/kqueue/libkqueue/extr_read.c_test_kevent_socket_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kevent = type { i32 }

@.str = private unnamed_addr constant [31 x i8] c"kevent(EVFILT_READ, EV_DELETE)\00", align 1
@sockfd = common dso_local global i32* null, align 8
@EVFILT_READ = common dso_local global i32 0, align 4
@EV_DELETE = common dso_local global i32 0, align 4
@kqfd = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_kevent_socket_del() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.kevent, align 4
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %3 = load i8*, i8** %1, align 8
  %4 = call i32 @test_begin(i8* %3)
  %5 = load i32*, i32** @sockfd, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @EVFILT_READ, align 4
  %9 = load i32, i32* @EV_DELETE, align 4
  %10 = load i32*, i32** @sockfd, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = call i32 @EV_SET(%struct.kevent* %2, i32 %7, i32 %8, i32 %9, i32 0, i32 0, i32* %11)
  %13 = load i32, i32* @kqfd, align 4
  %14 = call i64 @kevent(i32 %13, %struct.kevent* %2, i32 1, i32* null, i32 0, i32* null)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %0
  %17 = load i8*, i8** %1, align 8
  %18 = call i32 @err(i32 1, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  br label %19

19:                                               ; preds = %16, %0
  %20 = call i32 (...) @kevent_socket_fill()
  %21 = call i32 (...) @test_no_kevents()
  %22 = call i32 (...) @kevent_socket_drain()
  %23 = call i32 (...) @success()
  ret void
}

declare dso_local i32 @test_begin(i8*) #1

declare dso_local i32 @EV_SET(%struct.kevent*, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i64 @kevent(i32, %struct.kevent*, i32, i32*, i32, i32*) #1

declare dso_local i32 @err(i32, i8*, i8*) #1

declare dso_local i32 @kevent_socket_fill(...) #1

declare dso_local i32 @test_no_kevents(...) #1

declare dso_local i32 @kevent_socket_drain(...) #1

declare dso_local i32 @success(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
